examples/bad/return-inside-call.elina
fn f(): int {
  return 10;
}

fn g(): int {
  f();
}

fn main(): void {
  var x: int = g();
}